ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0, 7.1.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.1
    • Server Serverless 2023-09-04
    • 145
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-76750 made changes such that import quorum gets satisfied after receiving votes from all voting data-bearing nodes, and not from all data-bearing nodes. serverless_reject_multiple_ops_split.js test explicitly add 2 non-voting data-bearing nodes and runs the shard merge which causes this fatal assertion to fail. To be noted, In production, we won't be having this kind of setup.

            Assignee:
            Suganthi Mani
            Reporter:
            Suganthi Mani
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: