SERVER-79969 serverless_reject_multiple_ops_split.js test failure fix.